test(system): add comprehensive unit tests for system package
- Add SystemConfigurationTest with builder, constructor, setter, and equality tests
- Add SystemConfigurationGroupTest with builder, constructor, setter, and equality tests
- Add SystemConfigurationGroupServiceTest with complete service method coverage
- Update SystemConfigurationServiceTest with all missing methods (50 tests total)
- Use @Nested pattern for organizing tests by method
- Achieve 100% code coverage for system package
- All 80 tests passing

Total test count: 80 tests
Test classes: 4
Nested classes: 29
Code coverage: 100%

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>